--- a/config.json
+++ b/config.json
@@ -2,5 +2,5 @@
     "api_key": "sk-f5da205149244f15b2eaaa2c65f52cf7",
     "base_url": "https://api.deepseek.com",
     "model": "deepseek-chat",
-    "strict_mode": false
+    "strict_mode": true
 }
